--- a/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
+++ b/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
@@ -6,8 +6,8 @@
     #searchInput
     [value]="searchText"
     [isAutoFocused]="true"
-    (change)="onSearchTextChange(searchInput.value)"
-    (keyup)="onSearchTextChange(searchInput.value)"
+    (change)="onSearchTextChange()"
+    (keyup)="onSearchTextChange()"
     type="text"
     class="search">
 
