--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -58,6 +58,7 @@
 
       <button
         cf-button
+        *ngIf="false"
         (click)="onShowNowClick()"
         [class.button-primary]="isNowSelected"
         class="tags__item button-tag">
@@ -69,7 +70,7 @@
         (click)="onShowCustomClick()"
         [class.button-primary]="isCustomSelected"
         class="tags__item button-tag">
-        Мероприятия
+        Движухи
       </button>
     </nav>
 
