--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -31,7 +31,7 @@
 
     <cf-section
       (change)="onCustomSectionModeClick()"
-      [title]="'Показывать мероприятия'"
+      [title]="'Показывать движухи'"
       [isChecked]="isCustomSectionMode">
     </cf-section>
   </div>
