--- a/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
+++ b/lib/src/components/containers/lectures_container/layout_actions/layout_actions.html
@@ -3,9 +3,11 @@
 
   <input
     text-input
+    #searchInput
     [value]="searchText"
     [isAutoFocused]="true"
-    (keyup)="onSearchTextChange($event)"
+    (change)="onSearchTextChange()"
+    (keyup)="onSearchTextChange()"
     type="text"
     class="search">
 
