--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -63,7 +63,13 @@
 
   .schedule {
     margin-right: -16px;
-    padding-bottom: 24px;
+    padding: 8px 0 24px;
+  }
+
+  .schedule__day-date {
+    display: block;
+    margin-bottom: 16px;
+    @include font-heading-3;
   }
 
   .schedule__section-day + .schedule__section-day,
