zero states fix welcome page showing fix favorite 404

--- a/lib/src/components/containers/empty_container/empty_container.html
+++ b/lib/src/components/containers/empty_container/empty_container.html
@@ -1,13 +1,10 @@
 <layout
-		[title]="'404'">
+  [title]="'404'"
+  [state]="state">
 
-	<div
-			content>
+  <div
+    content>
 
-		<h2
-				class="info">
-			Упппс... мы не понимаем, чего ты хочешь.
-			Жми на кнопку -- приходи на стенд Wrike!
-		</h2>
-	</div>
+    <empty-state></empty-state>
+  </div>
 </layout>
