Search, back button, icons, release badge count, revert some outline hacks

--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -20,8 +20,8 @@
 
 <p
   class="about__description">
-	Wrike и CodeFest X объединились, чтобы помочь тебе настроить своё расписание. Сейчас ты видишь MVP версию,
-	давай сделаем лучше? Приходи на стенд Wrike - поработай в гараже
+	Wrike и&nbsp;CodeFest&nbsp;X объединились, чтобы помочь тебе настроить своё расписание. Сейчас ты видишь MVP версию,
+	давай сделаем лучше? Приходи на&nbsp;стенд Wrike - поработай в&nbsp;гараже
 </p>
 
 <ul
@@ -34,8 +34,8 @@
       xmlns="http://www.w3.org/2000/svg"
       width="37" height="40" viewBox="0 -3 37 40">
 			<g fill="none" fill-rule="evenodd">
-				<path stroke="#FCDE98" d="M1 11h24v24H1z"/>
-				<path fill="#FCDE98" d="M13 0h24v24H13z"/>
+				<path stroke="currentColor" d="M1 11h24v24H1z"/>
+				<path fill="currentColor" d="M13 0h24v24H13z"/>
 			</g>
     </svg>
 
