--- a/lib/src/components/ui/event_card/event_card.html
+++ b/lib/src/components/ui/event_card/event_card.html
@@ -27,9 +27,9 @@
   </div>
 
   <!-- Title -->
-  <h1 class="event-card__title">
+  <p class="event-card__title">
     {{ title }}
-  </h1>
+  </p>
 
   <div
     class="event-card__description"
