--- a/lib/src/components/containers/lecture_container/lecture_container.html
+++ b/lib/src/components/containers/lecture_container/lecture_container.html
@@ -4,7 +4,8 @@
   <layout
     *ngIf="isReady"
     [title]="'Доклад'"
-    [state]="state">
+    [state]="state"
+    [navType]="NavigationType.back">
 
     <div
       actions>
@@ -21,15 +22,19 @@
 
         <svg
           *ngIf="!isFavorite"
+          aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24">
           <path d="M19.18 9.02a.93.93 0 0 1 .53 1.6l-3.16 3.02.75 4.26c.13.77-.7 1.35-1.4.99L12 16.88l-3.9 2.01c-.7.36-1.53-.22-1.4-.99l.75-4.26-3.16-3.02a.93.93 0 0 1 .53-1.6l4.37-.62 1.95-3.88a.97.97 0 0 1 1.72 0L14.8 8.4l4.37.62zm-4.25 3.96l2.94-2.74-4.06-.57L12 6.14l-1.81 3.53-4.06.57 2.94 2.74-.7 3.88L12 15.03l3.62 1.83-.69-3.88z" fill-rule="evenodd"/>
         </svg>
+        <span class="visually-hidden" *ngIf="!isFavorite">Добавить в избранное</span>
 
         <svg
           *ngIf="isFavorite"
+          aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24">
           <path d="M19.18 9.02a.93.93 0 0 1 .53 1.6l-3.16 3.02.75 4.26c.13.77-.7 1.35-1.4.99L12 16.88l-3.9 2.01c-.7.36-1.53-.22-1.4-.99l.75-4.26-3.16-3.02a.93.93 0 0 1 .53-1.6l4.37-.62 1.95-3.88a.97.97 0 0 1 1.72 0L14.8 8.4l4.37.62z" fill-rule="evenodd"/>
         </svg>
+        <span class="visually-hidden" *ngIf="isFavorite">Удалить из избранного</span>
       </button>
     </div>
 
@@ -95,10 +100,10 @@
         </div>
 
         <!-- Title -->
-        <h1
+        <h2
           class="event__title">
           {{ lecture.title }}
-        </h1>
+        </h2>
 
         <!-- Info -->
         <div
@@ -162,6 +167,8 @@
                   class="info-item__media-container info-item__media-container--placeholder">
 
                   <svg
+                    role="image"
+                    aria-label="Время проведения:"
                     xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24"
                     class="info-item__media-icon">
                     <path d="M12 4a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 14.4a6.4 6.4 0 1 1 0-12.8 6.4 6.4 0 0 1 0 12.8zm2.48-5.9l-1.68-.96V8a.8.8 0 1 0-1.6 0v4.1a.52.52 0 0 0 .04.16.71.71 0 0 0 .06.13.69.69 0 0 0 .08.13l.13.1.07.08 2.08 1.2a.8.8 0 0 0 .4.1.8.8 0 0 0 .4-1.5h.02z" fill-rule="evenodd"/>
@@ -199,8 +206,8 @@
         *ngIf="isLikable"
         class="event__vote">
         <!-- Vote -->
-        <h2
-          class="event__vote-title">Понравился доклад? Голосуй!</h2>
+        <h3
+          class="event__vote-title">Понравился доклад? Голосуй!</h3>
 
         <p
           class="event__vote-description">
