--- a/lib/src/components/containers/lectures_container/layout_actions/layout_actions.scss
+++ b/lib/src/components/containers/lectures_container/layout_actions/layout_actions.scss
@@ -1,7 +1,34 @@
+@import "../../../../../../web/assets/styles/variables.scss";
+
 :host {
+  .search-input {
+    @include font-heading-2;
+  }
+}
+
+:host(.search-mode) {
   display: flex;
+  width: 100%;
+
+  .icon-container {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   .search {
-    border: 1px solid #ccc;
+    display: flex;
+    flex-grow: 1;
+  }
+
+  .search-input {
+    margin-left: -32px;
+    margin-right: -32px;
+    flex-grow: 1;
+    background: transparent;
+    padding: 0 36px;
+    border: none;
   }
 }
