--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div
+    <nav
       group>
 
       <material-list-item
@@ -38,53 +38,73 @@
           Выйти
         </div>
       </div>
-    </div>
+    </nav>
   </material-list>
 </material-drawer>
 
 <!-- Content -->
 <div
-  class="layout__content">
+  class="layout__root">
 
   <!-- Header -->
   <header
-    class="layout-header">
+    class="layout__header">
 
-    <div
-      class="material-header-row">
+    <button
+      *ngIf="isMenuShown"
+      cf-button
+      class="layout__nav-button button-icon-only"
+      (click)="drawer.toggle()">
 
-      <material-button
-        icon
-        class="material-drawer-button"
-        (trigger)="drawer.toggle()">
+      <svg
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <g fill="currentColor" fill-rule="evenodd">
+            <rect width="18" height="2" x="3" y="6" rx="1"/>
+            <rect width="18" height="2" x="3" y="11" rx="1"/>
+            <rect width="18" height="2" x="3" y="16" rx="1"/>
+        </g>
+      </svg>
+      <span class="visually-hidden">Меню</span>
+    </button>
 
-        <material-icon
-          icon="menu">
-        </material-icon>
-      </material-button>
+    <button
+      *ngIf="isBackShown"
+      cf-button
+      class="layout__nav-button button-icon-only"
+      (click)="goBack()">
 
-      <span
-        class="material-header-title">
+      <svg
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path fill="currentC" d="M17.995 11h-9.59l4.007-3.994a1.003 1.003 0 1 0-1.42-1.42L5.285 11.29a1 1 0 0 0-.21.33c-.1.243-.1.516 0 .759a1 1 0 0 0 .21.33l5.707 5.703a1 1 0 0 0 1.42 0 .999.999 0 0 0 0-1.42l-4.007-3.994h9.59a1 1 0 1 0 0-1.998z"/>
+      </svg>
+      <span class="visually-hidden">Назад</span>
+      
+    </button>
+
+    <h1
+      *ngIf="isTitleShown"
+      class="layout__title">
+      <span>
         {{ title }}
-        <span class="badge">
+        &ngsp;
+        <span class="layout__title-badge">
           <ng-content
             select="[badge]"
           ></ng-content>
         </span>
       </span>
+    </h1>
 
-      <div
-        class="material-spacer">
-      </div>
-
-      <nav
-        class="material-navigation">
-
-        <ng-content
-          select="[actions]"
-        ></ng-content>
-      </nav>
+    <div
+      *ngIf="isSpacerShown"
+      class="layout__header-spacer">
     </div>
+
+    <ng-content
+      select="[actions]"
+    ></ng-content>
   </header>
 
   <ng-content
@@ -93,7 +113,7 @@
 
   <!-- Content -->
   <main
-    class="content">
+    class="layout__content">
 
     <ng-content
       select="[content]"
