--- a/lib/src/components/containers/sections_container/sections_container.scss
+++ b/lib/src/components/containers/sections_container/sections_container.scss
@@ -1,4 +1,24 @@
 :host {
   display: block;
   height: 100%;
+
+  // todo
+  .sections__apply-button-container {
+    padding: 0 24px 24px 24px;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 600px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 72px;
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff 24%, #ffffff);
+  }
+
+  .sections__container-apply-button-gutter {
+    height: 72px;
+  }
 }
