--- a/lib/src/components/containers/empty_container/empty_state/empty_state.scss
+++ b/lib/src/components/containers/empty_container/empty_state/empty_state.scss
@@ -3,17 +3,16 @@
 :host {
   display: block;
   text-align: center;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 100%;
-  transform: translate(-50%, -50%);
+  //position: absolute;
+  //left: 50%;
+  //top: 50%;
+  //width: 100%;
+  //transform: translate(-50%, -50%);
   color: $fg-color-secondary;
 
-  padding: 0 24px;
+  padding: 24px;
 
   .zero-state__icon {
-    opacity: .3;
     margin-bottom: 8px;
   }
 
