Add toggle to sections

--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -36,3 +36,9 @@
     </cf-section>
   </div>
 </section>
+
+<toggle
+  [text]="'Показывать движухи'"
+  [isChecked]="true"
+  class="toggle-line">
+</toggle>
