Add toggle to sections

--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -33,3 +33,9 @@
     class="toggle-line">
   </toggle>
 </section>
+
+<toggle
+  [text]="'Показывать движухи'"
+  [isChecked]="true"
+  class="toggle-line">
+</toggle>
