--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -27,36 +27,71 @@
     </svg>
   </header>
 
-  <nav>
-
-    <ul
-      class="nav">
-
-      <li
-        (click)="onMenuItemClick(item)"
-        *ngFor="let item of RoutePaths.menu"
-        class="nav__item nav__item--active">
-
-        <a
-          class="nav__link">
-          {{ item.title }}
-        </a>
-      </li>
-    </ul>
-  </nav>
-
   <div
-    *ngIf="isAuthorized">
+    class="drawer__body">
 
-    <img [src]="avatarPath" alt="" width="50">
+    <nav>
 
-    <div>{{ userName }}</div>
+      <ul
+        class="nav">
+
+        <!-- nav__item--active for active state -->
+        <li
+          (click)="onMenuItemClick(item)"
+          *ngFor="let item of RoutePaths.menu"
+          class="nav__item">
+
+          <a
+            class="nav__link">
+            {{ item.title }}
+          </a>
+        </li>
+      </ul>
+    </nav>
 
     <div
-      (click)="onLogout()">
-      Выйти
+      *ngIf="isAuthorized"
+      class="user">
+
+      <div
+        class="user__media">
+
+        <img
+          [src]="avatarPath"
+          [alt]="userName"
+          [title]="userName"
+          width="40"
+          height="40"
+          class="user__image">
+      </div>
+
+      <div
+        class="user__section">
+
+        <div
+          class="user__name">
+          {{ userName }}
+        </div>
+
+        <button
+          class="user__logout-button">
+          Выйти
+        </button>
+      </div>
     </div>
   </div>
+
+  <footer
+    class="drawer__footer">
+
+    <svg
+      xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24"
+      class="drawer__footer-icon">
+      <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z" fill-rule="evenodd"/>
+    </svg>
+
+    Сделано командой Wrike
+  </footer>
 </material-drawer>
 
 <!-- Content -->
