--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -117,6 +117,36 @@
   }
   // --- end user
 
+  // user ---
+
+  .user {
+    display: flex;
+    align-items: center;
+    padding: 16px 32px;
+  }
+
+  .user__media {
+    flex-shrink: 0;
+    margin-right: 8px;
+  }
+
+  .user__image {
+    display: block;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+
+  .user__section {
+    flex-grow: 1;
+  }
+
+  .user__logout-button {
+    @include button-reset;
+    color: $link-color;
+    cursor: pointer;
+  }
+  // --- end user
+
   .layout__root {
     height: 100%;
   }
